--- a/src/components/meetups/NewMeetupForm.module.css
+++ b/src/components/meetups/NewMeetupForm.module.css
@@ -1,32 +1,30 @@
-.item{
-    margin: 1rem 0;
-    margin: 3rem auto;
-    width: 90%;
-    max-width: 40rem;
-}
-
-.image{
-    width: 100%;
-    height: 20rem;
-    overflow: hidden;
-    border-top-right-radius: 6xp;
-    border-top-left-radius: 6xp;
-
-}
-
-.image img{
-    width: 100%;
-    object-fit: cover;
-}
-
-.content{
-    text-align: center;
+.form{
     padding: 1rem;
+}
+
+.control{
+    margin-bottom: 0.5rem;
+}
+
+.control label{
+    display: block;
+    font-weight: bold;
+    margin-bottom: 0.5rem;
+}
+
+.control input,
+.control textarea{
+    display: block;
+    font: inherit;
+    border-radius: 4px;
+    border: 1px solid #ccc;
+    padding: 0.25rem;
+    width: 100%;
 }
 
 .actions{
     margin-top: 1rem;
-    text-align: center;
+    text-align: right;
 }
 
 .actions button{
