add to fav. button

--- a/src/index.css
+++ b/src/index.css
@@ -31,7 +31,7 @@ h2{
   border-bottom: 16px solid blue;
   width: 120px;
   height: 120px;
-  text-align: center;
+  margin: 20% 40%;
   -webkit-animation: spin 2s linear infinite; /* Safari */
   animation: spin 2s linear infinite;
 }
